@@ -1,5 +1,10 @@
 2008-07-28  Bastien Nocera  <hadess@hadess.net>
 
+	* theme-installer.c (cleanup_tmp_dir):
+	* theme-util.c (theme_delete): Fix build for the previous change
+
+2008-07-28  Bastien Nocera  <hadess@hadess.net>
+
 	* theme-util.c:
 	* theme-util.h: Remove the directory deletion helpers, and
 	move them to the common sub-directory
